Fix the vertical align of inline code

--- a/assets/less/content/code.less
+++ b/assets/less/content/code.less
@@ -21,7 +21,7 @@ code {
   font-weight: 400;
   background-color: @lightestBlue;
   border: 1px solid @gray;
-  vertical-align: middle;
+  vertical-align: baseline;
   border-radius: 2px;
   padding: 0 .5em;
 }
